--- a/views/login.hbs
+++ b/views/login.hbs
@@ -2,7 +2,7 @@
 
 <body>
     <form action="/login" method="POST">
-    <input type="text" name="username" id="">
+    <input type="email" name="email" id="">
     <input type="password" name="password" id="">
     <input type="submit" value="Enviar">
     </form>
