--- a/views/carto.hbs
+++ b/views/carto.hbs
@@ -1,3 +1,7 @@
 {{> head}}
-<h1>CARTOGRAFÍA</h1>
-<p>Acá de debería ir una bonita cartografía</p>
+<h1>Cartografía</h1>
+<h4>Hello <%= user %>
+</h4>
+<a href="/users/logout">Logout</a>
+<p>Acá debería ir un lindo mapa</p>
+
