--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,9 +1,54 @@
-{{> head}}
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Login</title>
+</head>
 
 <body>
-    <form action="/login" method="POST">
-    <input type="email" name="email" id="">
-    <input type="password" name="password" id="">
-    <input type="submit" value="Enviar">
-    </form>
+  <h1>Login</h1>
+
+  <ul>
+    <% if (typeof errors !='undefined' ) { %>
+      <% errors.forEach(error=> { %>
+        <li>
+          <%= error.message %>
+        </li>
+        <% }) %>
+          <% } %>
+  </ul>
+
+  <ul>
+    {{#if messages.success_msg}}
+    <li>{{messages.success_msg}}</li>
+    {{/if}}
+  </ul>s
+
+  <ul>
+    <% if (messages.error) { %>
+      <li>
+        <%= messages.error %>
+      </li>
+      <% } %>
+  </ul>
+
+  <form action="/users/login" method="POST">
+    <div>
+      <input type="email" id="email" name="email" placeholder="Email" required />
+    </div>
+    <div>
+      <input type="password" id="password" name="password" placeholder="Password" required />
+    </div>
+    <div>
+      <input type="submit" value="Login" />
+    </div>
+
+    <a href="/users/registro">Register</a>
+  </form>
 </body>
+
+</html>
