--- a/views/registro.hbs
+++ b/views/registro.hbs
@@ -1,26 +1,61 @@
-{{> head}}
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Register</title>
+  </head>
+  <body>
+    <h1>Register</h1>
 
-<body>
-  <main>
-    <form style="width: 20rem;" method="POST" action="/registro">
-      <div class="mb-3">
-        <label for="correo" class="form-label">Correo electrónico</label>
-        <input type="email" class="form-control" id="correo" aria-describedby="emailHelp" name="correo">
-        <div id="emailHelp" class="form-text">Nunca compartiremos su correo electrónico con nadie más.</div>
+    <ul>
+  {{#if errors}}
+    {{#each errors}}
+      <li>{{this.message}}</li>
+    {{/each}}
+  {{/if}}
+</ul>
+    <form action="/users/registro" method="POST">
+      <div>
+        <input type="text" id="name" name="name" placeholder="Name" required />
       </div>
-      <div class="mb-3 ">
-        <label class="form-label" for="nombre">Nombre</label>
-        <input type="text" class="form-control" id="nombre" name="nombre">
+      <div>
+        <input
+          type="email"
+          id="email"
+          name="email"
+          placeholder="Email"
+          required
+        />
       </div>
-      <div class="mb-3 ">
-        <label class="form-label" for="apellido">Apellidos</label>
-        <input type="text" class="form-control" id="apellido" name="apellido">
+      <div>
+        <input
+          type="password"
+          id="password"
+          name="password"
+          placeholder="Password"
+          required
+        />
       </div>
-      <div class="mb-3">
-        <label for="password" class="form-label">Contraseña</label>
-        <input type="password" class="form-control" id="password" name="password">
+      <div>
+        <input
+          type="password"
+          id="password2"
+          name="password2"
+          placeholder="Confirm Password"
+          required
+        />
       </div>
-      <button type="submit" class="btn btn-primary">Registrarse</button>
+      <div>
+        <input type="submit" value="Register" />
+      </div>
+
+      <a href="/users/login">Already registered? Login here</a>
     </form>
-  </main>
-</body>
+  </body>
+</html>
