--- a/views/carto.hbs
+++ b/views/carto.hbs
@@ -1,7 +1,8 @@
 {{> head}}
-<h1>Cartografía</h1>
-<h4>Hello <%= user %>
-</h4>
-<a href="/users/logout">Logout</a>
+<h1>Dashboard</h1>
+
+    <a href="/users/logout">Logout</a>
+
+    <h4>Hola {{ user }}</h4>
 <p>Acá debería ir un lindo mapa</p>
 
