--- a/views/cards.hbs
+++ b/views/cards.hbs
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-    <title>Document00</title>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">  
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+  <title>Document00</title>
 </head>
+
 <body>
-    {{#each rows}}
+  {{!-- {{#each rows}}
   <div>
     <h1>{{id}}</h1>
     <p>{{nombre}}</p>
@@ -18,19 +20,24 @@
     <p>{{horario}}</p>
     <p>{{geom}}</p>
   </div>
-{{/each}}
+  {{/each}} --}}
 
-<p>-----</p>
+  <p>-----</p>
 
+  <h1>CARDS</h1>
 
-        <section class="py-5 seccion-tienda-admin">
-            <div class="container px-4 px-lg-5 mt-5">
-                <div id="contenedor-general"
-                    class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
+  {{#each rows}}
+  <div class="card" style="width: 18rem;">
+    <img class="card-img-top" src="{{img}}" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">{{nombre}}</h5>
+      <p class="card-text">{{direccion}}</p>
+      <a href="#" class="btn btn-primary">{{geom}}</a>
+    </div>
+  </div>
+  {{/each}}
 
-
-
-                </div>
-            </div>
+  
 </body>
+
 </html>
