--- a/views/cards.hbs
+++ b/views/cards.hbs
@@ -32,7 +32,9 @@
     <div class="card-body">
       <h5 class="card-title">{{nombre}}</h5>
       <p class="card-text">{{direccion}}</p>
-      <a href="#" class="btn btn-primary">{{geom}}</a>
+      <p>A: {{coordinates}}</p>
+      <a href="#" class="btn btn-primary">Editar</a>
+      <a href="#" class="btn btn-primary">Borrar</a>
     </div>
   </div>
   {{/each}}
