--- a/views/mapa.hbs
+++ b/views/mapa.hbs
@@ -33,8 +33,9 @@
    
 
 <link href="https://api.mapbox.com/mapbox-gl-js/v2.13.0/mapbox-gl.css" rel="stylesheet">    
-<script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.51.0/mapbox-gl.js'></script>
-<script src="/js/app.js"></script>
+<script async defer src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.51.0/mapbox-gl.js'></script>
+<script async defer src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script src="/js/admin.js"></script>
 
 </body>
 </html>
