--- a/views/mantenedor.hbs
+++ b/views/mantenedor.hbs
@@ -8,63 +8,72 @@
         <link rel="stylesheet"
             href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
             />
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+            crossorigin="anonymous">
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+            crossorigin="anonymous"></script>
     </head>
     <body>
 
         <nav> <a href="/">Home</a>
-        <a href="/registro">Registro</a>  </nav>
+            <a href="/registro">Registro</a> </nav>
 
 
 
-        <table>
-            <tr>
-                <th>#</th>
-                <th>Nombre</th>
-                <th>Email</th>
-                <th></th>
-                <th></th>
-            </tr>
-            <tr>
-                <form id="formulario" action="/mantenedor" method="POST">
-                    <td></td>
-                    <td><input type="text" id="in_name" name="name"
-                            placeholder="Name"></td>
-                    <td><input type="text" id="in_email" name="email"
-                            placeholder="Email"></td>
-                            <td><input type="text" id="in_password" name="password"
-                            placeholder="Password"></td>
-                    <td><button id="btn_add"><span
-                                class="material-symbols-outlined">
-                                add
-                            </span></button>
-                        <button id="btn_edit" hidden><span
-                                class="material-symbols-outlined">
-                                edit
-                            </span></button>
-                    </td>
-                </form>
-            </tr>
+        <!-- Form -->
+        <form id="formulario" class="row g-3" action="/mantenedor" method="POST">
+            <div class="col-auto">
+                <label for="in_name" class="visually-hidden">Nombre:</label>
+                <input type="text" class="form-control" id="in_name" name="name"
+                    placeholder="Nombre">
+            </div>
+            <div class="col-auto">
+                <label for="in_email" class="visually-hidden">Email:</label>
+                <input type="email" class="form-control" id="in_email"
+                    name="email" placeholder="Email">
+            </div>
+            <div class="col-auto">
+                <label for="in_password" class="visually-hidden">Contraseña:</label>
+                <input type="password" class="form-control" id="in_password"
+                    name="password" placeholder="Contraseña">
+            </div>
+            <div class="col-auto">
+                <button type="submit" class="btn btn-primary mb-3">Agregar</button>
+            </div>
+        </form>
 
-            {{#each users}}
-            <tr id="tr-{{id}}">
-                <td>{{id}}</td>
-                <td>{{name}} </td>
-                <td> {{email}}</td>
-                <td><a href="#" onclick="editar({{id}})"><span
-                            class="material-symbols-outlined">
-                            edit
-                        </span></a>
-                </td>
-                <td>
-                    <a href="/mantenedor/{{id}}?_method=delete"><span
-                            class="material-symbols-outlined">
-                            delete
-                        </span></a>
-                </td>
-            </tr>
 
-            {{/each}}
+        <!-- Table -->
+        <table class="table table-hover">
+            <thead>
+                <tr>
+                    <th>#</th>
+                    <th>Nombre</th>
+                    <th>Email</th>
+                    <th></th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                {{#each users}}
+                <tr id="tr-{{id}}">
+                    <td>{{id}}</td>
+                    <td>{{name}}</td>
+                    <td>{{email}}</td>
+                    <td><a href="#" onclick="editar({{id}})"><span
+                                class="material-symbols-outlined">edit</span></a></td>
+                    <td><a href="/mantenedor/{{id}}?_method=delete"><span
+                                class="material-symbols-outlined">delete</span></a></td>
+                </tr>
+                {{/each}}
+            </tbody>
         </table>
+
 
         <script>
             function editar(id){
