--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -214,7 +214,7 @@
                                 class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3
                                 row-cols-xl-4 justify-content-center">
 
-                                {{#each rows}}
+                                {{#each museums}}
                                 <div class="card" style="width: 18rem;">
                                     <img class="card-img-top" src="{{img}}"
                                         alt="Card image cap">
