--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -221,11 +221,11 @@
                                     <div class="card-body">
                                         <h5 class="card-title">{{nombre}}</h5>
                                         <p class="card-text">{{direccion}}</p>
-                                        <p>A: {{coordinates}}</p>
+                                        <p>A: {{geometry}}</p>
                                         <a href="#" class="btn btn-primary">Editar
-                                            {{st_asgeojson}}</a>
+                                            </a>
                                             <a href="#" class="btn btn-primary">Borrar
-                                            {{st_asgeojson}}</a>
+                                            </a>
                                     </div>
                                 </div>
                                 {{/each}}
