--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -219,9 +219,10 @@
                                     <img class="card-img-top" src="{{img}}"
                                         alt="Card image cap">
                                     <div class="card-body">
-                                        <h5 class="card-title">{{nombre}}</h5>
+                                        <h5>ID: {{id}}</h5>
+                                        <h6 class="card-title">{{nombre}}</h6>
                                         <p class="card-text">{{direccion}}</p>
-                                        <p>A: {{geometry}}</p>
+                                        <p>{{geometry}}</p>
                                         <a href="#" class="btn btn-primary">Editar
                                             </a>
                                             <a href="#" class="btn btn-primary">Borrar
