--- a/views/registro.hbs
+++ b/views/registro.hbs
@@ -5,22 +5,27 @@
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css"
-    />
+      />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Register</title>
   </head>
   <body>
     <h1>Register</h1>
+    <a href="/">Home</a>
+    <a href="/puntos">Puntos</a>
 
+    {{#if errors}}
     <ul>
-  {{#if errors}}
-    {{#each errors}}
-      <li>{{this.message}}</li>
-    {{/each}}
-  {{/if}}
-</ul>
-    <form action="/users/registro" method="POST">
+      {{#each errors}}
+      <li>{{this}}</li>
+      {{/each}}
+    </ul>
+    {{/if}}
+
+
+
+    <form action="/registro" method="POST">
       <div>
         <input type="text" id="name" name="name" placeholder="Name" required />
       </div>
@@ -31,7 +36,7 @@
           name="email"
           placeholder="Email"
           required
-        />
+          />
       </div>
       <div>
         <input
@@ -40,17 +45,17 @@
           name="password"
           placeholder="Password"
           required
-        />
+          />
       </div>
-      <div>
+      {{!-- <div>
         <input
           type="password"
           id="password2"
           name="password2"
           placeholder="Confirm Password"
           required
-        />
-      </div>
+          />
+      </div> --}}
       <div>
         <input type="submit" value="Register" />
       </div>
