--- a/views/landingadmin.hbs
+++ b/views/landingadmin.hbs
@@ -9,6 +9,9 @@
 <body>
     <h1>Página Adminsitrador</h1>
 
+    <h2>Bienvenido {{ user }}</h4>
+    <h4>¿Dónde quieres ir?:</h2>
+
      <nav> <a href="/mantenedor">Mantenedor Usuarios</a>
         <a href="/mantenedor2">Mantenedor Puntos</a>
         <a href="/mapa">Mapa</a>         
