--- a/views/mantenedor.hbs
+++ b/views/mantenedor.hbs
@@ -17,8 +17,8 @@
 
 <body>
 
-    <nav> <a href="/">Home</a>
-        <a href="/registro">Registro</a>
+    <nav> <a href="/">Home</a> <a href="/users/logout">Logout</a>
+        
     </nav>
 
 
