--- a/views/landingadmin.hbs
+++ b/views/landingadmin.hbs
@@ -14,7 +14,8 @@
 
      <nav> <a href="/mantenedor">Mantenedor Usuarios</a>
         <a href="/mantenedor2">Mantenedor Puntos</a>
-        <a href="/mapa">Mapa</a>         
+        <a href="/mapa">Mapa</a>       
+          <a href="/profile">Profile</a>    
         </nav>
 
         <a href="/users/logout">Logout</a>
