--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -11,12 +11,12 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/"> {{ user }}</a>
+          <a class="nav-link active" aria-current="page" href="/"> {{ user.name }}</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button"
             data-bs-toggle="dropdown" aria-expanded="false">
-            <img src="https://img.icons8.com/fluency/30/null/user-male-circle.png"/>
+            <img src="/img/{{ user.id }}.jpg" alt="Avatar" style="width: 30px; height: 30px; border-radius: 50%;"/>
           </a>
           <ul class="dropdown-menu dropdown-menu-end">
             <li><a class="dropdown-item" href="#">Editar perfil</a></li>
