--- a/views/mantenedor2.hbs
+++ b/views/mantenedor2.hbs
@@ -222,9 +222,7 @@
 
         <section class="py-5 seccion-tienda-admin">
             <div class="container px-4 px-lg-5 mt-5">
-                <div id="contenedor-general" class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3
-                                row-cols-xl-4 justify-content-center">
-
+                <div id="contenedor-general" class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
                     {{#each museums}}
                     <div class="col mb-5 producto{{id}}">
                         <div class="card h-100">
