--- a/public/css/cards.css
+++ b/public/css/cards.css
@@ -1,85 +1,91 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Slab:100,300,400,700');
 @import url('https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i');
 
-*{
+* {
   box-sizing: border-box;
 }
 
-body, html {
-   font-family: 'Roboto Slab', serif;
-    margin: 0;
+body,
+html {
+  font-family: 'Roboto Slab', serif;
+  margin: 0;
   width: 100%;
-height: 100%;
-    padding: 0;
+  height: 100%;
+  padding: 0;
 }
 
 body {
-    background-color: #D2DBDD;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  .navbar {
-    width: 100%;
-  }
-  
-  .cards {
-    width: 100%;
-    max-width: 820px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin-top: 100px; /* add this line to create a 20px margin between the navbar and cards */
-  }
-
-.card--1 .card__img, .card--1 .card__img--hover {
-    background-image: url('https://cdn-icons-png.flaticon.com/512/33/33887.png');
+  background-color: #D2DBDD;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.card--2 .card__img, .card--2 .card__img--hover {
-    background-image: url('https://us.123rf.com/450wm/siamimages/siamimages1711/siamimages171100107/90441435-icono-de-ubicaci%C3%B3n-de-pin.jpg');
+.navbar {
+  width: 100%;
 }
 
-.card--3 .card__img, .card--3 .card__img--hover {
+.cards {
+  width: 100%;
+  max-width: 820px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-top: 100px;
+  /* add this line to create a 20px margin between the navbar and cards */
+}
+
+.card--1 .card__img,
+.card--1 .card__img--hover {
+  background-image: url('https://cdn-icons-png.flaticon.com/512/33/33887.png');
+}
+
+.card--2 .card__img,
+.card--2 .card__img--hover {
+  background-image: url('https://us.123rf.com/450wm/siamimages/siamimages1711/siamimages171100107/90441435-icono-de-ubicaci%C3%B3n-de-pin.jpg');
+}
+
+.card--3 .card__img,
+.card--3 .card__img--hover {
   background-image: url('https://png.pngtree.com/png-vector/20220527/ourmid/pngtree-map-pin-icon-point-marker-png-image_4748925.png');
 }
 
 .card__like {
-    width: 18px;
+  width: 18px;
 }
 
 .card__clock {
-    width: 15px;
+  width: 15px;
   vertical-align: middle;
-    fill: #AD7D52;
+  fill: #AD7D52;
 }
+
 .card__time {
-    font-size: 12px;
-    color: #AD7D52;
-    vertical-align: middle;
-    margin-left: 5px;
+  font-size: 12px;
+  color: #AD7D52;
+  vertical-align: middle;
+  margin-left: 5px;
 }
 
 .card__clock-info {
-    float: right;
+  float: right;
 }
 
 .card__img {
   visibility: hidden;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    width: 100%;
-    height: 235px;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 235px;
   border-top-left-radius: 12px;
-border-top-right-radius: 12px;
-  
+  border-top-right-radius: 12px;
+
 }
 
 .card__info-hover {
-    position: absolute;
-    padding: 16px;
+  position: absolute;
+  padding: 16px;
   width: 100%;
   opacity: 0;
   top: 0;
@@ -87,79 +93,83 @@ border-top-right-radius: 12px;
 
 .card__img--hover {
   transition: 0.2s all ease-out;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    width: 100%;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 100%;
   position: absolute;
-    height: 235px;
+  height: 235px;
   border-top-left-radius: 12px;
-border-top-right-radius: 12px;
-top: 0;
-  
+  border-top-right-radius: 12px;
+  top: 0;
+
 }
+
 .card {
-    margin-right: 25px;
-    margin-bottom: 25px; /* add a margin bottom to create space between rows */
-    transition: all .4s cubic-bezier(0.175, 0.885, 0, 1);
-    background-color: #fff;
-    width: calc(33.33% - 25px); /* subtract the margin right from the width */
-    position: relative;
-    border-radius: 12px;
-    overflow: hidden;
-    box-shadow: 0px 13px 10px -7px rgba(0, 0, 0,0.1);
-  }
-  
+  margin-right: 25px;
+  margin-bottom: 25px;
+  /* add a margin bottom to create space between rows */
+  transition: all .4s cubic-bezier(0.175, 0.885, 0, 1);
+  background-color: #fff;
+  width: calc(33.33% - 25px);
+  /* subtract the margin right from the width */
+  position: relative;
+  border-radius: 12px;
+  overflow: hidden;
+  box-shadow: 0px 13px 10px -7px rgba(0, 0, 0, 0.1);
+  flex-grow: 1;
+}
+
 .card:hover {
-  box-shadow: 0px 30px 18px -8px rgba(0, 0, 0,0.1);
-    transform: scale(1.10, 1.10);
+  box-shadow: 0px 30px 18px -8px rgba(0, 0, 0, 0.1);
+  transform: scale(1.10, 1.10);
 }
 
 .card__info {
-z-index: 2;
+  z-index: 2;
   background-color: #fff;
   border-bottom-left-radius: 12px;
-border-bottom-right-radius: 12px;
-   padding: 16px 24px 24px 24px;
+  border-bottom-right-radius: 12px;
+  padding: 16px 24px 24px 24px;
 }
 
 .card__category {
-    font-family: 'Raleway', sans-serif;
-    text-transform: uppercase;
-    font-size: 13px;
-    letter-spacing: 2px;
-    font-weight: 500;
+  font-family: 'Raleway', sans-serif;
+  text-transform: uppercase;
+  font-size: 13px;
+  letter-spacing: 2px;
+  font-weight: 500;
   color: #868686;
 }
 
 .card__title {
-    margin-top: 5px;
-    margin-bottom: 10px;
-    font-family: 'Roboto Slab', serif;
+  margin-top: 5px;
+  margin-bottom: 10px;
+  font-family: 'Roboto Slab', serif;
 }
 
 .card__by {
-    font-size: 12px;
-    font-family: 'Raleway', sans-serif;
-    font-weight: 500;
+  font-size: 12px;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 500;
 }
 
 .card__author {
-    font-weight: 600;
-    text-decoration: none;
-    color: #AD7D52;
+  font-weight: 600;
+  text-decoration: none;
+  color: #AD7D52;
 }
 
 .card:hover .card__img--hover {
-    height: 100%;
-    opacity: 0.3;
+  height: 100%;
+  opacity: 0.3;
 }
 
 .card:hover .card__info {
-    background-color: transparent;
-    position: relative;
+  background-color: transparent;
+  position: relative;
 }
 
 .card:hover .card__info-hover {
-    opacity: 1;
+  opacity: 1;
 }
