--- a/public/css/carto.css
+++ b/public/css/carto.css
@@ -1,21 +1,33 @@
-body { margin: 0; padding: 0; }
-#map { position: absolute; top: 0; bottom: 0; width: 100%; }
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap');
+
+body {
+  margin: 0;
+  padding: 0;
+}
+
+#map {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+}
 
 img {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 
 
- #location-btn{
+#location-btn {
   position: absolute;
-    top: 1%;
-    right: 10px;
-    z-index: 0;
+  top: 1%;
+  right: 10px;
+  z-index: 0;
 
-  }
- .button {
+}
+
+.button {
   position: relative;
   background-color: #4CAF50;
   border: none;
@@ -69,15 +81,13 @@ img {
   height: 5%;
 }
 
-
-
 .container {
   position: absolute;
   top: 2%;
   left: 45%;
-  }
+}
 
-  .mapboxgl-popup {
-    max-width: 400px;
-    font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
-    }
+.mapboxgl-popup {
+  max-width: 400px;
+  font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
+}
